Fixed the overflow in header in the small screen.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,9 +30,9 @@ body{
 }
 
 .container img{
-  width: 140px;
-  height: 140px;
-  margin: 5px;
+  width: 120px;
+  height: 120px;
+  margin: 1px;
 }
 
 .header-content {
@@ -47,14 +47,14 @@ body{
   padding: 0;
   background-image: url("../images/northenlight.jpg");
   background-size: cover; 
-  background-position: center; 
+  background-position: left; 
   background-repeat: no-repeat; 
   height: 150px; 
   display: flex; 
   align-items: center; 
   justify-content: center; 
   color: rgb(4, 56, 90); 
-  font-size: 1.5rem;
+  font-size: 1.1rem;
 } 
 .top-navigation .container {
   display: flex;
